2007-12-02  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp, include/openbabel/forcefield.h: Split 
	SystematicRotorSearch into ...Initialize and ...NextConformer. This 
	alows a progress bar to be displayed in avogadro.

	* src/forcefields/forcefieldghemical.cpp: Removed (commented out)
	special treatment of linear angles, wasn't workiung correctly, needs
	to be looked at...

2007-11-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/chains.cpp: Improve speed when clearing residue info in
	molecules with no residues.

	* include/openbabel/atom.h, src/atom.cpp: New method GetResidue()
	to optionally request no chain perception. Useful in
	builders/editors (e.g., Avogadro).

2007-11-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/Makefile.am, tools/Makefile.am: Fixes for building
	outside of the source tree.

	* test/iterators.cpp: Fix #include for OBRing. Now compiles cleanly.

2007-11-28  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/data.h, src/data.cpp: Added Allred-Rochow
	Electronegativities.

	* data/element.txt, data/element.h: idem.

	* src/forcefields/forcefieldmmff94.cpp: use it.

2007-11-28 Chris Morley

	* src/formats/smilesformat.cpp(ParseSimple): Add ForceImplH()
	to fix bug #1839589
	
	* src/mol.cpp(AssignSpinMultiplicities): Leave spinMultiplicity
	at zero (not hydrogen deficient) for atoms labelled as above.
	
	* include/openbabel/atom.h: newflag OB_ATOM_NOT_H_DEFICIENT
	with set and read functions the above.

2007-11-28  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: OBForceField::VectorTorsionDerivative() now
	returns 180 instead of 0. (was needed for MMFF94)

	* srd/forcefields/forcefieldghemical.cpp,
	src/forcefields/forcefielduff.cpp: Also changed 0 to 180 for torsions.
	Bug fix for OBForceFieldXXX::GetGradients(). (Compute() wasn't called)

	* src/forcefields/forcefieldmmff.*: More changes...
